# symbols-mcp-server

./: .env.example  .env.public  .env.railway  .gitignore  INSTALLATION.md  LICENSE  Procfile  README.md  mcp.json  package.json  proxy_api.py  pyproject.toml  railway-proxy.toml  railway.toml  run.sh  windsurf-mcp-config.json  wsgi.py
symbols_mcp/: __init__.py  server.py
symbols_mcp/skills/: AGENT_INSTRUCTIONS.md
