[project]
name = "symbols-mcp-server"
version = "1.0.0"
description = "MCP server for the Symbols AI assistant - provides DOMQL/Symbols code generation, migration, and documentation tools"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx[http2]>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.0.0",
]

[project.scripts]
symbols-mcp = "symbols_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["symbols_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
